--- a/SQLInterview.tex
+++ b/SQLInterview.tex
@@ -1,17 +1,77 @@
-
+% Use: pdflatex SQLInterview.tex
 \documentclass[a4paper,11pt]{article}
 \begin{document}
 \title{Microsoft SQL Server Developer Interview Questions}
-\author{Wilson <postgresql2016@gmail.com>}
+\author{postgresql2016(at)gmail.com}
 \date{January 27, 2016}
 \maketitle
 \section{T-SQL}
-This is the T-SQL question.
+Q: If the SQL performance is bad, tell me how you can fix it? \newline \newline
+\noindent 
+Q: What is the difference between DELETE and TRUNCATE commands? \newline \newline
+\noindent 
+Q: What is CTE? \newline \newline
+\noindent 
+Q: I can DROP PROCEDURE and CREATE PROCEDURE, and I can also ALTER PROCEDURE. What is the difference? \newline \newline
+\noindent 
+Q: How do you know acceptable transaction size? \newline \newline
+\noindent 
+Q: How to add a constraint to let your table accept data more than 5 years old? \newline \newline
+\noindent 
+Q: Please select all tables name containing column called 'somename'. \newline \newline
+\noindent 
+Q: Please list the table with more than 2 dependencies \newline \newline
+\noindent 
+Q: Tell me how to use MERGE statement. \newline \newline
+\noindent 
+Q: Do you know the CASE type? \newline \newline
+\noindent 
+Q: What is Cursor? \newline \newline
+\noindent 
+Q: How do you check if your data is modified successfully in production? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
 
 \section{SSIS}
-This is the T-SQL question.
+Q: What is the difference between Script Component and Script Task? \newline \newline
+\noindent 
+Q: What is advantage and disadvantage of C\# and T-SQL? \newline \newline
+\noindent 
+Q: The SSIS package is failed in production, how do you make it continue running? \newline \newline
+\noindent 
+Q: I need to incremental deploy my package(A project with package A and B under Project Deployment mode). A needs to be fixed, B is good. How to deploy A only? \newline \newline
+\noindent 
+Q: Give me an example about how to use C\# in SSIS package. \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+
 \section{SSRS}
-This is the T-SQL question.
+Q: List all the ways you know to deploy a report.\newline \newline
+\noindent 
+Q: What is ? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+
 \section{SSAS}
-This is the T-SQL question.
+-- This is the SSAS question.
+
+\section{Development}
+-- This is the Agile/Scrum question.
+
+\section{Behavior Questions}
+Q: How do you keep up with new technology? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+\noindent 
+Q: What is ? \newline \newline
+
+
 \end{document}
