--- a/SQLInterview.tex
+++ b/SQLInterview.tex
@@ -1,4 +1,8 @@
 % Use: pdflatex SQLInterview.tex
+% git add SQLInterview.tex
+% git commit -m "something"
+% git push origin master
+
 \documentclass[a4paper,11pt]{article}
 \begin{document}
 \title{Microsoft SQL Server Developer Interview Questions}
