--- a/SQLInterview.tex
+++ b/SQLInterview.tex
@@ -9,12 +9,14 @@
 \author{postgresql2016(at)gmail.com}
 \date{January 27, 2016}
 \maketitle
-\section{T-SQL}
-Q: If the SQL performance is bad, tell me how you can fix it? \newline \newline
+The following interview questoins are all from the REAL interviews(including both telephone and on-site interviews). Hope this document is helpful during your job hunting process. Enjoy!
+\section{MS SQL Server and T-SQL}
+Q: \underline{If the SQL performance is bad, tell me how you can fix it?} \newline
+A: This is a typical and difficult question. Usually the SQL in the production database meets some performance trouble. The quickest way is to check the statistics of the related tables(You can find the table list from the SQL code), and update the statistics very quickly. If the statistics are updated, in most case, MS SQL Server will find the best execution plan by itself, and the trouble is fixed. However, if you do not see any performance improvement after you update the statistics of all tables, then you need to capture the execution plan from the memory(The SQL is still running/hung there, so you can easily extract the real execution plan from the memory) and compare it with the old execution plan. MS SQL Server store the old execution plan in the database. If the execution plan is changed, then you can use the old but good execution plan to apply on the current SQL. As the last resort, you should review the SQL code and rewrite it, or add some hints in the code. This is the basic idea about how to trouble shoot the SQL performance issue in the production database.\newline \newline
 \noindent 
-Q: What is the difference between DELETE and TRUNCATE commands? \newline \newline
+Q: What is the difference between DELETE and TRUNCATE commands in T-SQL? \newline \newline
 \noindent 
-Q: What is CTE? \newline \newline
+Q: What is CTE? What is CTE can do but normal T-SQL cannot do?\newline \newline
 \noindent 
 Q: I can DROP PROCEDURE and CREATE PROCEDURE, and I can also ALTER PROCEDURE. What is the difference? \newline \newline
 \noindent 
@@ -34,11 +36,61 @@ Q: What is Cursor? \newline \newline
 \noindent 
 Q: How do you check if your data is modified successfully in production? \newline \newline
 \noindent 
+Q: What is the difference between index seek and index scan? \newline \newline
+\noindent 
+Q: When you design a table, what is the way to ensure that each row is unique, what way do you accomplish this? \newline \newline
+\noindent 
+Q: How do you make DATETIME data type displaying as DATE without TIME? \newline \newline
+\noindent 
+Q: \underline{What is the size of the database you haved worked on?} \newline
+A: It depends on the type of the database. We have three database types: OLTP(Online Transaction Processing) database, ODS(Operational Data Store) database, EDW(Enterprise Data Warehouse) database. OLTP: 500 GB - 3 TB; ODS: 10 TB - 60 TB; EDW: 5 TB - 30 TB. OLTP is much smaller, and the biggest one is ODS because it contains all the history raw data for many years.\newline \newline
+\noindent 
+Q: When you assign a value to a variable, what is the difference between 'SET' and 'SELECT'? \newline \newline
+\noindent 
+Q: When you have INNER JOIN with condition 'ON 1=1', what kind of expected result will you have? \newline \newline
+\noindent 
+Q: As a SQL developer, could you tell me why I need or do not need the cluster index? Just generally speaking.\newline \newline
+\noindent 
+Q: What is the advantage and disadvantage of using GUID as the unique key compared with Integer type? \newline \newline
+\noindent 
+Q: What is the consideration when you design a new query to extract the data from a very large table to ensure the good performance? \newline \newline
+\noindent 
+Q: What is the syntax order of FROM, HAVING, SELECT, ORDER BY, GROUP BY, WHERE, INTO in a T-SQL SELECT statement? \newline \newline
+\noindent 
+Q: What is the execution order of FROM, HAVING, SELECT, ORDER BY, GROUP BY, WHERE, INTO in a T-SQL SELECT statement? \newline \newline
+\noindent 
+Q: Giving you the freedom to design something from the beggining, what normal form do you typically use for the development? \newline \newline
+\noindent 
+Q: What does the optimizer do to handle the INNER/LEFT JOIN condition and WHERE clause? \newline \newline
+\noindent 
+Q: What is the index view with SCHEMABINDING option in MS SQL Server? \newline \newline
+\noindent 
+Q: \underline{Please list three different ways to import data into MS SQL Server.} \newline
+A: Bulk Insert, BCP, and SSIS package.\newline\newline
+\noindent 
+Q: What is the difference between table variable and temp table? \newline \newline
+\noindent 
+Q: How to share the output of one SQL query with another SQL session? \newline \newline
+\noindent 
+Q: What is the set option to suppress the row count output of one SQL session? \newline \newline
+\noindent 
+Q: What is the difference between row compression and page compression? \newline \newline
+\noindent 
+Q: What is the VIEW and when should it be used? \newline \newline
+\noindent 
+Q: What is IDENTITY column? \newline \newline
+\noindent 
+Q: You have a requirement to extract every LASTNAME from table A that is not in table B. How to do that? \newline \newline
+\noindent 
+Q: What is Data Warehouse? Can you explain what is the difference between Kimball and Inmon data warehouse? \newline \newline
+\noindent 
 Q: What is ? \newline \newline
 \noindent 
 Q: What is ? \newline \newline
 
 \section{SSIS}
+Q: Tell me how to load Type 2 dimension table in SSIS? \newline \newline
+\noindent 
 Q: What is the difference between Script Component and Script Task? \newline \newline
 \noindent 
 Q: What is advantage and disadvantage of C\# and T-SQL? \newline \newline
@@ -48,6 +100,12 @@ Q: The SSIS package is failed in production, how do you make it continue running
 Q: I need to incremental deploy my package(A project with package A and B under Project Deployment mode). A needs to be fixed, B is good. How to deploy A only? \newline \newline
 \noindent 
 Q: Give me an example about how to use C\# in SSIS package. \newline \newline
+\noindent 
+Q: There is a SSIS package that loads data from one flat file into a SQL Server table. It failed in the middle night, and you are called to do the troubleshooting. What are the steps you want to do? \newline \newline
+\noindent 
+Q: How to get rid of the duplicate records from the millions of records from the data that you want to import into SQL server to avoid unique constraint violation? \newline \newline
+\noindent 
+Q: What is the difference between synchronous transformation and asynchronous transformation in SSIS? \newline \newline
 \noindent 
 Q: What is ? \newline \newline
 \noindent 
@@ -73,7 +131,7 @@ Q: What is ? \newline \newline
 \section{Behavior Questions}
 Q: How do you keep up with new technology? \newline \newline
 \noindent 
-Q: What is ? \newline \newline
+Q: What is the reason why you want to leave current position and look for new opportunity? \newline \newline
 \noindent 
 Q: What is ? \newline \newline
 
